tests/expectations/compiler/finalize/finalize_with_return.out
DCE_ENABLED:
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:10:5
     |
  10 |     async function finalize_mint_public (public receiver: address, public amount: u64) -> u64 {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  11 |         Mapping::set(account, receiver, amount);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  12 |         return amount;
     |         ^^^^^^^^^^^^^^
  13 |     }
     |     ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:17:7
     |
  17 |     } async function finalize_public_adder(a: u8, b: u8) -> public u8 {
     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  18 |         return a + b;
     |         ^^^^^^^^^^^^^
  19 |     }
     |     ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.

DCE_DISABLED:
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:10:5
     |
  10 |     async function finalize_mint_public (public receiver: address, public amount: u64) -> u64 {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  11 |         Mapping::set(account, receiver, amount);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  12 |         return amount;
     |         ^^^^^^^^^^^^^^
  13 |     }
     |     ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:17:7
     |
  17 |     } async function finalize_public_adder(a: u8, b: u8) -> public u8 {
     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  18 |         return a + b;
     |         ^^^^^^^^^^^^^
  19 |     }
     |     ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.
